# fluffy-octo-adventure

./: .gitignore  Dockerfile.dev-flet  compose.yml
.github/: pull_request_template.md
NextApp/: BACKEND-MIGRATION-COMPLETE.md  README-Migration.md  package-lock.json  package.json
NextApp/src/app/: layout.tsx  page.tsx
NextApp/src/app/api/auth/login/: route.ts
NextApp/src/app/api/catalog/: route.ts
NextApp/src/app/api/catalog/[id]/: route.ts
NextApp/src/app/api/users/: route.ts
NextApp/src/app/api/users/[id]/: route.ts
NextApp/src/app/catalog/: page.tsx
NextApp/src/app/login/: page.tsx
NextApp/src/app/users/: page.tsx
NextApp/src/components/: AppBar.tsx  Navigation.tsx
NextApp/src/hooks/: useRouter.ts
NextApp/src/lib/data/: storage.ts
NextApp/src/lib/types/: api.ts
NextApp/src/lib/utils/: jwt.ts
NextApp/src/types/: index.ts
NextApp/src/utils/: auth.ts
backend/: compose.yml  pom.xml
backend/src/main/java/com/example/demo/: FoaBackendApp.java  FoaBackendApplication.java
backend/src/main/resources/: application.properties  schema.sql
backend/src/main/resources/data/: products.json  users.json
docs/develop/: goal.md
frontend/: .gitignore  README.md  pyproject.toml
frontend/mock/: mock.py
frontend/src/: main.py  requirements.txt
frontend/src/config/: __init__.py  url.py
frontend/src/core/: routed_view.py
frontend/src/router/: __init__.py  router.py
frontend/src/views/: index.py
frontend/src/views/catalog/: index.py
frontend/src/views/login/: index.py
frontend/src/views/users/: index.py
(+62 files in other folders)
