[project]
name = "foa-frontend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "iwsh", email = "kabwkkr.seanae@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"foa-frontend" = "foa_frontend:main"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
