[project]
name = "foa-frontend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "iwsh", email = "kabwkkr.seanae@gmail.com" }
]
dependencies = [
    "flet>=0.24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"foa-frontend" = "foa_frontend:main"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.rye.scripts]
dev = "flet run --web -p 3000 -d -r src"
dev-native = "flet run src"
mock = "python mock/mock.py"
build = "flet build web src"
host-generated = "python -m http.server 3000 -d ./src/build/web/"
